kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-cicd-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: jenkins-cicd-app
  template:
    metadata:
      labels:
        app: jenkins-cicd-app
    spec:
      containers:
        - name: jenkins-cicd-app
          image: YOUR_DOCKERHUB_USERNAME/jenkins-cicd:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
