kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-cicd-service
spec:
  type: ClusterIP
  selector:
    app: jenkins-cicd-app
  ports:
    - port: 80
      targetPort: 80
